Compplted verify component with dummy behvaiour

--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="button-group form-input-gap">
-        <button type="submit" pButton class="tms-btn" label="Create an account"></button>
+        <button type="submit" pButton class="tms-btn-primary" label="Create an account"></button>
       </div>
     </form>
     <div class="text-center">
